[project]
name = "doc-ranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-gpu>=1.7.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.35",
    "nltk>=3.9.2",
    "numpy<2",
    "pypdf>=6.6.1",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
]
